Fixed free-ebook from TEST
- Fix: remove the shortcodes at the bottom
- Fix: replace old video shortcode with new video shortcode

--- a/free-ebook.html
+++ b/free-ebook.html
@@ -18,9 +18,7 @@
 <div style="height:32px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
 
-<!-- wp:shortcode -->
-[su_youtube_advanced url="https://youtu.be/qjpARa8ZoPk" autohide="no" https="yes" class="item-youtube"]
-<!-- /wp:shortcode -->
+<!-- wp:acf/setup-video {"id":"block_5fed0cdbd8bec","name":"acf/setup-video","data":{"field_5f67594054faf":"","field_5f67590d07cf0":"","field_5f675b308c2ec":["youtube","vimeo"],"field_5f7342535112c":"enable","field_5f64d81a39ee5":"https://youtu.be/qjpARa8ZoPk","field_5f64d8a239ee6":"","field_5f79615896caa":"","field_5f64d913b836d":"","field_5f6ae44c4540a":"","field_5f675c3b80150":""},"align":"","mode":"edit"} /-->
 
 <!-- wp:spacer {"height":32} -->
 <div style="height:32px" aria-hidden="true" class="wp-block-spacer"></div>
@@ -156,20 +154,3 @@
 <!-- wp:spacer {"height":32} -->
 <div style="height:32px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
-
-<div class="panel panel-ctacontent">
-<div class="top">
-<h4 class="titlebar">PHONE COACHING, EMAIL COACHING &amp; PRODUCTS</h4>
-</div>
-<div class="main">
-<div class="item-ctacontent">[su_post field="post_content" post_id="22710"]</div>
-<div class="item-ctacontent last">[su_post field="post_content" post_id="22704"]</div>
-<div class="clearfix space-bottom-double hide-meddown">&nbsp;</div>
-<div class="item-ctacontent hide-medaboveup last">[su_post field="post_content" post_id="22698"]</div>
-<div class="item-ctacontent hide-meddown wide">[su_post field="post_content" post_id="26405"]</div>
-<div class="clearfix">&nbsp;</div>
-</div>
-</div>
-<div class="clearfix space-vertical">&nbsp;</div>
-<p>[su_signature]</p>
-<p>[urc_related_articles][/urc_related_articles]</p>
