Fixed life-coaching-services on TEST

--- a/life-coaching-services.html
+++ b/life-coaching-services.html
@@ -90,23 +90,26 @@
 <!-- /wp:paragraph -->
 
 <!-- wp:html -->
-<p><br>[su_post field="post_content" post_id="22706"]</p>
+[su_post field="post_content" post_id="22706"]
 <div class="clearfix space-vertical">&nbsp;</div>
+<!-- /wp:html -->
+
+<!-- wp:html -->
 <div class="panel panel-ctacontent">
 <div class="top">
-<h4 class="titlebar">PHONE COACHING, EMAIL COACHING &amp; PRODUCTS</h4>
+<h4 class="titlebar">PHONE COACHING &amp; RECOMMENDED PRODUCTS</h4>
 </div>
 <div class="main">
-<div class="item-ctacontent">[su_post field="post_content" post_id="22710"]</div>
-<div class="item-ctacontent last">[su_post field="post_content" post_id="22704"]</div>
-<div class="clearfix space-bottom-double hide-meddown">&nbsp;</div>
-<div class="item-ctacontent hide-medaboveup last">[su_post field="post_content" post_id="22698"]</div>
-<div class="item-ctacontent hide-meddown wide">[su_post field="post_content" post_id="26405"]</div>
-<div class="clearfix">&nbsp;</div>
+<div class="item-ctacontent">[su_post field="post_content" post_id="41243"]</div>
+<div class="item-ctacontent last">[su_post field="post_content" post_id="41241"]</div>
+<div class="clearfix"></div>
 </div>
 </div>
-<div class="clearfix space-vertical">&nbsp;</div>
-<p>[su_signature]</p>
+<div class="clearfix space-vertical"></div>
+<!-- /wp:html -->
+
+<!-- wp:html -->
+[su_signature]
 <h4 class="item-widgettitle space-bottom space-top-double clearfix">SUGGESTED ARTICLES</h4>
 <div class="space-bottom clearfix">&nbsp;</div>
 <p><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><br><ins class="adsbygoogle" style="display: block;" data-ad-format="autorelaxed" data-ad-client="ca-pub-0947746501358966" data-ad-slot="2135583692"></ins><br><script><br />
