--- a/life-coaching-services.html
+++ b/life-coaching-services.html
@@ -6,9 +6,7 @@
 <p class="margin-zero-top has-huge-font-size"><strong>Life Coaching Services</strong></p>
 <!-- /wp:paragraph -->
 
-<!-- wp:shortcode -->
-[su_youtube_advanced url="https://www.youtube.com/embed/7ckq5rNTA_o" autohide="no" https="yes" class="item-youtube"]
-<!-- /wp:shortcode -->
+<!-- wp:acf/setup-video {"id":"block_5fed1f81332b4","name":"acf/setup-video","data":{"field_5f67594054faf":"","field_5f67590d07cf0":"","field_5f675b308c2ec":["youtube","vimeo"],"field_5f7342535112c":"enable","field_5f64d81a39ee5":"https://www.youtube.com/embed/7ckq5rNTA_o","field_5f64d8a239ee6":"","field_5f79615896caa":"","field_5f64d913b836d":"","field_5f6ae44c4540a":"","field_5f675c3b80150":""},"align":"","mode":"edit"} /-->
 
 <!-- wp:html -->
 <div class="item-productcta">
@@ -100,13 +98,23 @@
 <h4 class="titlebar">PHONE COACHING &amp; RECOMMENDED PRODUCTS</h4>
 </div>
 <div class="main">
-<div class="item-ctacontent">[su_post field="post_content" post_id="41243"]</div>
-<div class="item-ctacontent last">[su_post field="post_content" post_id="41241"]</div>
+<div class="item-ctacontent">[su_post field="post_content" post_id="42318"]</div>
+<div class="item-ctacontent last">[su_post field="post_content" post_id="42315"]</div>
 <div class="clearfix"></div>
 </div>
 </div>
 <div class="clearfix space-vertical"></div>
 <!-- /wp:html -->
+
+<!-- wp:group {"backgroundColor":"yellow"} -->
+<div class="wp-block-group has-yellow-background-color has-background"><div class="wp-block-group__inner-container"><!-- wp:paragraph {"fontSize":"tiny"} -->
+<p class="has-tiny-font-size"><strong>NOTE:</strong> The codes on the CTA above will be different on the LIVE site so it needs to be changed when this content is copied to the LIVE site.<br>Phone CTA - STAGING "41243" | LIVE: "42804" | TEST: "42318"<br>Amazon CTA - STAGING: "41241" | LIVE: "42802" | TEST: "42315"</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph {"fontSize":"tiny"} -->
+<p class="has-tiny-font-size">This message will be removed on the LIVE site<br></p>
+<!-- /wp:paragraph --></div></div>
+<!-- /wp:group -->
 
 <!-- wp:html -->
 [su_signature]
