Fixed phone-coaching on TEST from STAGING

--- a/phone-coaching.html
+++ b/phone-coaching.html
@@ -6,9 +6,7 @@
 <p class="margin-zero-top has-huge-font-size"><strong>Phone Coaching</strong></p>
 <!-- /wp:paragraph -->
 
-<!-- wp:shortcode -->
-[su_youtube_advanced url="http://www.youtube.com/embed/7ckq5rNTA_o" autohide="no" https="yes" class="item-youtube"]
-<!-- /wp:shortcode -->
+<!-- wp:acf/setup-video {"id":"block_5fed306cc709e","name":"acf/setup-video","data":{"field_5f67594054faf":"","field_5f67590d07cf0":"","field_5f675b308c2ec":["youtube","vimeo"],"field_5f7342535112c":"enable","field_5f64d81a39ee5":"http://www.youtube.com/embed/7ckq5rNTA_o","field_5f64d8a239ee6":"","field_5f79615896caa":"","field_5f64d913b836d":"","field_5f6ae44c4540a":"","field_5f675c3b80150":""},"align":"","mode":"edit"} /-->
 
 <!-- wp:html -->
 <div class="item-productcta">
@@ -60,21 +58,23 @@
 <!-- wp:html -->
 <p><br>[su_post field="post_content" post_id="22706"]</p>
 <div class="clearfix space-bottom">&nbsp;</div>
-<h4 class="item-widgettitle"><a href="http://dev.understandingrelationships.com/products">PHONE COACHING &amp; RECOMMENDED PRODUCTS</a></h4>
-<div class="item-audio">
-<div class="item-chapter textcenter">
-<div class="clearfix">&nbsp;</div>
-<p>[su_post field="post_content" post_id="22704"]</p>
-<div class="clearfix">&nbsp;</div>
+<!-- /wp:html -->
+
+<!-- wp:html -->
+<div class="panel panel-ctacontent">
+<div class="top">
+<h4 class="titlebar">PHONE COACHING &amp; RECOMMENDED PRODUCTS</h4>
 </div>
-<div class="item-chapter last textcenter">
-<div class="clearfix">&nbsp;</div>
-<p>[su_post field="post_content" post_id="22698"]</p>
-<div class="clearfix">&nbsp;</div>
+<div class="main">
+<div class="item-ctacontent">[su_post field="post_content" post_id="42318"]</div>
+<div class="item-ctacontent last">[su_post field="post_content" post_id="42315"]</div>
+<div class="clearfix"></div>
 </div>
-<div class="clearfix">&nbsp;</div>
 </div>
-<div class="clear space-bottom-double">&nbsp;</div>
+<div class="clearfix space-vertical"></div>
+<!-- /wp:html -->
+
+<!-- wp:html -->
 <p>[su_signature]</p>
 <h4 class="item-widgettitle space-bottom space-top-double clearfix">SUGGESTED ARTICLES</h4>
 <div class="space-bottom clearfix">&nbsp;</div>
