--- a/about-coach-corey-wayne.html
+++ b/about-coach-corey-wayne.html
@@ -1,6 +1,4 @@
-<!-- wp:shortcode -->
-[su_youtube_advanced url="http://www.youtube.com/embed/7ckq5rNTA_o" autohide="no" https="yes" class="item-youtube"]
-<!-- /wp:shortcode -->
+<!-- wp:acf/setup-video {"id":"block_5fed3809f2e35","name":"acf/setup-video","data":{"video_title":"","_video_title":"field_5f67594054faf","video_thumbnail":"","_video_thumbnail":"field_5f67590d07cf0","video_toggle":["youtube","vimeo"],"_video_toggle":"field_5f675b308c2ec","video_default":"enable","_video_default":"field_5f7342535112c","video_youtube":"http://www.youtube.com/embed/7ckq5rNTA_o","_video_youtube":"field_5f64d81a39ee5","video_vimeo":"","_video_vimeo":"field_5f64d8a239ee6","video_audio":"","_video_audio":"field_5f79615896caa","video_connect":"","_video_connect":"field_5f64d913b836d","video_related_post":"","_video_related_post":"field_5f6ae44c4540a","video_summary":"","_video_summary":"field_5f675c3b80150"},"align":"","mode":"edit"} /-->
 
 <!-- wp:html -->
 <div class="item-productcta">
@@ -87,21 +85,24 @@
 
 <!-- wp:html -->
 <p><br>[su_post field="post_content" post_id="22706"]</p>
+<div class="clearfix space-bottom">&nbsp;</div>
+<!-- /wp:html -->
+
+<!-- wp:html -->
 <div class="panel panel-ctacontent">
 <div class="top">
-<h4 class="titlebar">PHONE COACHING, EMAIL COACHING &amp; PRODUCTS</h4>
+<h4 class="titlebar">PHONE COACHING &amp; RECOMMENDED PRODUCTS</h4>
 </div>
 <div class="main">
-<div class="item-ctacontent">[su_post field="post_content" post_id="22710"]</div>
-<div class="item-ctacontent last">[su_post field="post_content" post_id="22704"]</div>
-<div class="clearfix space-bottom-double hide-meddown">&nbsp;</div>
-<div class="item-ctacontent hide-medaboveup last">[su_post field="post_content" post_id="22698"]</div>
-<div class="item-ctacontent hide-meddown wide">[su_post field="post_content" post_id="26405"]</div>
-<div class="clearfix">&nbsp;</div>
+<div class="item-ctacontent">[su_post field="post_content" post_id="42318"]</div>
+<div class="item-ctacontent last">[su_post field="post_content" post_id="42315"]</div>
+<div class="clearfix"></div>
 </div>
 </div>
-<div class="clearfix space-vertical">&nbsp;</div>
-<div class="clear space-bottom-double">&nbsp;</div>
+<div class="clearfix space-vertical"></div>
+<!-- /wp:html -->
+
+<!-- wp:html -->
 <p>[su_signature]</p>
 <h4 class="item-widgettitle space-bottom space-top-double clearfix">SUGGESTED ARTICLES</h4>
 <div class="space-bottom clearfix">&nbsp;</div>
