--- a/products.html
+++ b/products.html
@@ -1,24 +1,36 @@
-<h4>Products</h4>
-<h2 class="entry-title space-bottom">Coaching, Books, Supplements, Self-Help, Etc.</h2>
+<!-- wp:paragraph {"className":"margin-zero","fontSize":"small"} -->
+<p class="margin-zero has-small-font-size">Products</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph {"className":"margin-zero","fontSize":"large"} -->
+<p class="margin-zero has-large-font-size"><strong>Coaching, Books, Supplements, Self-Help, Etc.</strong></p>
+<!-- /wp:paragraph -->
+
+<!-- wp:html -->
 <div class="panel panel-ctacontent">
 <div class="top">
-<h4 class="titlebar">PHONE COACHING, EMAIL COACHING &amp; PRODUCTS</h4>
+<h4 class="titlebar">PHONE COACHING &amp; RECOMMENDED PRODUCTS</h4>
 </div>
 <div class="main">
-<div class="item-ctacontent">[su_post field="post_content" post_id="22710"]</div>
-<div class="item-ctacontent last">[su_post field="post_content" post_id="22704"]</div>
-<div class="clearfix space-bottom-double hide-meddown"></div>
-<div class="item-ctacontent hide-medaboveup last">[su_post field="post_content" post_id="22698"]</div>
-<div class="item-ctacontent hide-meddown wide">[su_post field="post_content" post_id="26405"]</div>
+<div class="item-ctacontent">[su_post field="post_content" post_id="42318"]</div>
+<div class="item-ctacontent last">[su_post field="post_content" post_id="42315"]</div>
 <div class="clearfix"></div>
 </div>
 </div>
 <div class="clearfix space-vertical"></div>
+<!-- /wp:html -->
+
+<!-- wp:html -->
 [su_signature]
 <h4 class="item-widgettitle space-bottom space-top-double clearfix">SUGGESTED ARTICLES</h4>
 <div class="space-bottom clearfix"></div>
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle" style="display:block" data-ad-format="autorelaxed" data-ad-client="ca-pub-0947746501358966" data-ad-slot="2135583692"></ins>
+<ins class="adsbygoogle" style="display: block;" data-ad-format="autorelaxed" data-ad-client="ca-pub-0947746501358966" data-ad-slot="2135583692"></ins>
 <script><br />
      (adsbygoogle = window.adsbygoogle || []).push({});<br />
 </script>
+<!-- /wp:html -->
+
+<!-- wp:paragraph -->
+<p></p>
+<!-- /wp:paragraph -->
